# Microstructure-informed-mechanical-fields

./: .gitignore  CITATION.cff  DATA_LICENSE.md  LICENSE  README.md  environment.yml  pyproject.toml
data/raw/: README.md  ti980_hys_manifest.csv
data/raw/ti980_hys/: Method 16_Position 9_00000 LC.hys  Method 16_Position 9_00001 LC.hys  Method 16_Position 9_00002 LC.hys  Method 16_Position 9_00003 LC.hys  Method 16_Position 9_00004 LC.hys  Method 16_Position 9_00005 LC.hys  Method 16_Position 9_00006 LC.hys  Method 16_Position 9_00007 LC.hys  Method 16_Position 9_00008 LC.hys  Method 16_Position 9_00009 LC.hys  Method 16_Position 9_00010 LC.hys  Method 16_Position 9_00011 LC.hys  Method 16_Position 9_00012 LC.hys  Method 16_Position 9_00013 LC.hys  Method 16_Position 9_00014 LC.hys  Method 16_Position 9_00015 LC.hys  Method 16_Position 9_00016 LC.hys  Method 16_Position 9_00017 LC.hys  Method 16_Position 9_00018 LC.hys  Method 16_Position 9_00019 LC.hys  Method 16_Position 9_00020 LC.hys  Method 16_Position 9_00021 LC.hys  Method 16_Position 9_00022 LC.hys  Method 16_Position 9_00023 LC.hys  Method 16_Position 9_00024 LC.hys  Method 16_Position 9_00025 LC.hys  Method 16_Position 9_00026 LC.hys  Method 16_Position 9_00027 LC.hys  Method 16_Position 9_00028 LC.hys  Method 16_Position 9_00029 LC.hys  Method 16_Position 9_00030 LC.hys  (+2612 more)
examples/abaqus/: README.md  assign_voxel_materials.py
examples/fenicsx_linear_elasticity/: README.md  linear_elastic_voxel_demo.py
mechanical_fields/: __init__.py  coordinates.py  dbscan.py  gpr.py  io.py  qc.py  voxel_mapping.py
