[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "microstructure-informed-mechanical-fields"
version = "0.1.0"
description = "Microstructure-informed reconstruction of mechanical fields from nanoindentation data."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Muduo Li" }]
dependencies = [
  "numpy>=1.24",
  "pandas>=2.0",
  "scikit-learn>=1.3",
  "torch>=2.0",
  "gpytorch>=1.11",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["mechanical_fields*"]
